--- a/packages/com.sonosthesia.sequencer/package.json
+++ b/packages/com.sonosthesia.sequencer/package.json
@@ -1,6 +1,7 @@
 {
   "author": "Jonathan Thorpe",
   "dependencies": {
+    "com.cysharp.unitask": "2.3.3",
     "com.neuecc.unirx": "7.1.0",
     "com.sonosthesia.utils": "1.1.0",
     "com.sonosthesia.channel": "1.1.0"
